--- a/DZ6/Newton.ipynb
+++ b/DZ6/Newton.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,10 +48,9 @@
     "        i_0 = -1\n",
     "    else:\n",
     "        i_0 = 0\n",
-    "    f = []\n",
-    "    for i in y:\n",
-    "        f.append(i)\n",
-    "    ans = np.poly1d([f[i_0]])\n",
+    "    x = x[0:]\n",
+    "    y = y[0:]\n",
+    "    ans = np.poly1d([y[i_0]])\n",
     "    q = np.poly1d([1, -x[i_0]]) / (x[1] - x[0])\n",
     "    x_part = np.poly1d([1])\n",
     "    fac = 1\n",
@@ -60,30 +59,26 @@
     "        koef *= -1\n",
     "    for i in range(len(x) - 1):\n",
     "        for j in range(len(x) - 1 - i):\n",
-    "            f[j] = (f[j+1] - f[j])\n",
+    "            y[j] = (y[j+1] - y[j])\n",
     "        x_part *= (q + koef * i)\n",
     "        if second:\n",
     "            i_0 -= 1\n",
     "        fac *= i + 1\n",
-    "        ans += x_part*f[i_0] / fac\n",
+    "        ans += x_part*y[i_0] / fac\n",
     "    return(ans)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-2.0, 3.0, -1.0, 7]\n",
-      "[2.5, -2.0, -1.0, 7]\n",
-      "[-1.5, -2.0, -1.0, 7]\n",
       "      3      2\n",
       "-1.5 x + 16 x - 53.5 x + 62\n",
-      "[2, 3, 4, 5] [7, 5, 8, 7]\n",
       "      3      2\n",
       "-1.5 x + 16 x - 53.5 x + 62\n"
      ]
@@ -92,9 +87,8 @@
    "source": [
     "x = [2, 3, 4, 5]\n",
     "y = [7, 5, 8, 7]\n",
-    "print(Newton_polynomial(x, y))\n",
-    "print(x, y)\n",
-    "print(Newton_interpolation_polynomial(x, y, False))"
+    "print(Newton_interpolation_polynomial(x, y, False))\n",
+    "print(Newton_polynomial(x, y))"
    ]
   }
  ],
